@@ -10,7 +10,11 @@ Sigil 0.9.2
     - Reduce fear of Cleaning ToValidXHTML by using serialize not prettyprint
     - Add ability to change Sigil's user preferences directory by specifying a new path
          via the SIGIL_CUSTOM_PREFS_DIR environment variable (path must be user-writable).
-
+    - Fix lost DOCTYPE info when splitting or merging
+    - Completely rework pretty printing via gumbo to be much more robust
+    - Make identification and storage of page-map.xml more robust
+    - Completely revamp Cleaning to use "Mend Code" and remove PrettyPrintGumbo as on option
+    - Rename PrettyPrintGumbo to "Mend and Prettify" and move to CodeView Right-click menu
 
 Sigil 0.9.1
     - Fix bug when template sgc_toc.css could be changed to blank on save, since no InitialLoad() was done
